Use HTML template

--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     <body>
         <div id="quiz"></div>
     </body>
+    <template id="template_question">
+        <div class="question">
+            <div>
+                <span class="question_number"></span>
+                <span class="question_text"></span>
+            </div>
+            <div>
+                <input class="question_guess"></input>
+            </div>
+            <div>
+                <p class="question_answer"></p>
+            </div>
+        </div>
+    </template>
     <script src="quiz.js"></script>
 </html>
